--- a/Site Fabrica/src/App.css
+++ b/Site Fabrica/src/App.css
@@ -6,6 +6,10 @@
   box-sizing: border-box;
 }
 
+html {
+  scroll-behavior: smooth;
+}
+
 :root {
   /* Cores do tema */
   --cor-principal: #fd810a;
