--- a/Site Fabrica/Components/Footer.css
+++ b/Site Fabrica/Components/Footer.css
@@ -50,6 +50,7 @@
 .partner-logo {
   display: flex;
   align-items: center;
+  padding-top: 2rem;
   justify-content: center;
   width: 350px;
   height: 150px;
