--- a/Site Fabrica/Components/Objectives.css
+++ b/Site Fabrica/Components/Objectives.css
@@ -1,7 +1,7 @@
 @import url("../src/App.css");
 
 .objectives {
-  background: linear-gradient(135deg, #1e4db0 0%, #164ca8 100%);
+  background: linear-gradient(135deg, #1e4db0 0%, hsl(218, 77%, 37%) 100%);
   padding: 3rem;
   min-height: 70vh;
   display: flex;
