--- a/Site Fabrica/Components/Performance.css
+++ b/Site Fabrica/Components/Performance.css
@@ -154,7 +154,7 @@
 }
 
 .card-title {
-  font-family: var(--fonte-principal);
+  font-family: var(--terceira-fonte);
   font-size: 1.2rem;
   font-weight: 600;
   margin-bottom: 1.5rem;
