--- a/Site Fabrica/Components/Footer.css
+++ b/Site Fabrica/Components/Footer.css
@@ -13,7 +13,7 @@
 }
 
 .footer-title {
-  font-family: var(--fonte-principal);
+  font-family: var(--quinta-fonte);
   font-size: 3rem;
   font-weight: 700;
   color: var(--preto);
