--- a/Site Fabrica/Components/Info.css
+++ b/Site Fabrica/Components/Info.css
@@ -5,7 +5,7 @@
   align-items: center;
   padding: 3rem 0 0 0;
   gap: 2rem;
-  font-family: var(--fonte-principal);
+  font-family: var(--fonte-secundaria);
   max-width: 1200px;
   margin: 0 auto;
 }
