--- a/Site Fabrica/Components/Objectives.css
+++ b/Site Fabrica/Components/Objectives.css
@@ -17,7 +17,7 @@
 
 .objectives-title {
   text-align: center;
-  font-family: var(--fonte-principal);
+  font-family: var(--terceira-fonte);
   font-size: 4rem;
   font-weight: 700;
   margin-bottom: 2rem;
@@ -62,7 +62,7 @@
 
 .objective-text {
   color: var(--branco);
-  font-family: var(--fonte-principal);
+  font-family: var(--fonte-secundaria);
   font-size: 1.5rem;
   font-weight: 400;
   line-height: 1.6;
