--- a/Site Fabrica/Components/Team.css
+++ b/Site Fabrica/Components/Team.css
@@ -21,10 +21,9 @@
 }
 
 .team-title {
-  font-family: var(--fonte-principal);
+  font-family: var(--terceira-fonte);
   background-color: #f5f5f5;
-  width: 100vw;
-  margin-left: calc(-50vw + 50%);
+  width: 100%;
   padding: 2rem 0;
   font-size: 4rem;
   font-weight: 700;
