--- a/Site Fabrica/src/App.css
+++ b/Site Fabrica/src/App.css
@@ -10,6 +10,10 @@ html {
   scroll-behavior: smooth;
 }
 
+body {
+  overflow-x: hidden;
+}
+
 :root {
   /* Cores do tema */
   --cor-principal: #fd810a;
