--- a/Site Fabrica/Components/Team.css
+++ b/Site Fabrica/Components/Team.css
@@ -22,13 +22,15 @@
 
 .team-title {
   font-family: var(--terceira-fonte);
-  background-color: #f5f5f5;
-  width: 100%;
-  padding: 2rem 0;
-  font-size: 4rem;
+  background-color: white;
+  width: 100vw;
+  margin-left: calc(-50vw + 50%);
+  padding: 1.5rem 0;
+  font-size: 3.2rem;
   font-weight: 700;
   margin-bottom: 3rem;
   letter-spacing: 0.1em;
+  text-align: center;
 }
 
 .title-orange {
@@ -125,12 +127,18 @@
   transition: all 0.3s ease;
 }
 
+.social-link img {
+  width: 18px;
+  height: 18px;
+  filter: brightness(0) invert(1);
+}
+
 .social-link.linkedin {
   background: #0077b5;
   color: var(--branco);
 }
 
-.social-link.github {
+.social-link.lattes {
   background: var(--preto);
   color: var(--branco);
 }
